add_subdirectory(calibration)
add_subdirectory(openpose)
add_subdirectory(tutorial_add_module)
add_subdirectory(tutorial_pose)
add_subdirectory(tutorial_python)
add_subdirectory(tutorial_thread)
add_subdirectory(tutorial_wrapper)
add_subdirectory(user_code)
if (UNIX OR APPLE)
  add_subdirectory(tests)
endif (UNIX OR APPLE)
